[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
axum = "0.6.1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
base64 = "*"
zip = "*"
tempfile = "*"


[[bin]]
name = "toolbox"
path = "src/main.rs"
